# BuyBestBrands

./: .pre-commit-config.yaml  LICENSE  README.md  SVM+for+Human+Activity+Recognition.ipynb  add_customer.py  app.py  data_sql.txt  pyproject.toml  ready_made_app.db  requirements.txt  schema_sql.txt  students.ipynb  update_shopping_cart.py
docs/: extras.md  know_problems.md  known_problems.md  references.md  unit_testing.md
templates/: about_v2.html  add_product.html  base.html  index_v2.html  product.html  products.html  suppliers.html  suppliers_v2.html
tests/: conftest.py  test_hello_world.py
